# pig-latin

./: README.md  pyproject.toml
.github/workflows/: code_quality.yml
src/pig_latin/: latin.py
tests/pig_latin/: test_latin.py
